Add telemetry, errorprone and nullaway (#28)
Co-authored-by: Lukas Bloder <lukas.bloder@gmail.com>